# lazyclicker.rs

./: Cargo.toml  README.md
src/: commands.rs  main.rs  mouse.rs  profiles.rs
