[package]
name = "lazyclicker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
ctrlc = "3.4.7"
dirs = "6.0.0"
mouse-rs = "0.4.2"
nix = { version = "0.30.1", features = ["signal"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
